// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`const: literal-only division expression with integer result > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "constant",
          "scope": "local",
          "type": "identifier",
          "value": "RESULT",
        },
        {
          "isInteger": true,
          "type": "literal",
          "value": 4,
        },
      ],
      "instruction": "const",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "constant",
          "scope": "local",
          "type": "identifier",
          "value": "RESULT",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`const: literal-only division expression with integer result > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 4
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`const: literal-only division expression with integer result > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;

exports[`const: literal-only multiplication expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "constant",
          "scope": "local",
          "type": "identifier",
          "value": "RESULT",
        },
        {
          "isInteger": true,
          "type": "literal",
          "value": 32,
        },
      ],
      "instruction": "const",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "constant",
          "scope": "local",
          "type": "identifier",
          "value": "RESULT",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`const: literal-only multiplication expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 32
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`const: literal-only multiplication expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;

exports[`int[]: buffer size from literal multiplication expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "buffer",
        },
        {
          "isInteger": true,
          "type": "literal",
          "value": 8,
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int[]",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "element-count",
          "scope": "local",
          "targetMemoryId": "buffer",
          "type": "identifier",
          "value": "count(buffer)",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "buffer",
        },
        {
          "isInteger": true,
          "type": "literal",
          "value": 8,
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int[]",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`int[]: buffer size from literal multiplication expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 32
    i32.const 8
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int[]: buffer size from literal multiplication expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "buffer": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 8,
    "byteAddress": 0,
    "default": {},
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "buffer",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 8,
    "pointerDepth": 0,
    "type": "int",
  },
  "output": {
    "allocationUnitAddress": 8,
    "allocationUnitCount": 1,
    "byteAddress": 32,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;

exports[`memory declaration: literal-only multiplication expression default > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "foo",
        },
        {
          "isInteger": true,
          "type": "literal",
          "value": 12,
        },
      ],
      "hasExplicitMemoryDefault": true,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "foo",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "foo",
        },
        {
          "isInteger": true,
          "type": "literal",
          "value": 12,
        },
      ],
      "hasExplicitMemoryDefault": true,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`memory declaration: literal-only multiplication expression default > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`memory declaration: literal-only multiplication expression default > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "foo": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 12,
    "elementWordSize": 4,
    "hasExplicitDefault": true,
    "id": "foo",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
  "output": {
    "allocationUnitAddress": 1,
    "allocationUnitCount": 1,
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;

exports[`push: float literal multiplication with float-typed result > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isInteger": false,
          "type": "literal",
          "value": 14,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`push: float literal multiplication with float-typed result > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    f32.const 0x1.cp+3 (;=14;)
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`push: float literal multiplication with float-typed result > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "float",
  },
}
`;

exports[`push: hex literal in division expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 8,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`push: hex literal in division expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 8
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`push: hex literal in division expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;

exports[`push: hex literal in multiplication expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 32,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`push: hex literal in multiplication expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 32
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`push: hex literal in multiplication expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;

exports[`push: literal-only division expression with float result > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isInteger": false,
          "type": "literal",
          "value": 0.5,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`push: literal-only division expression with float result > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    f32.const 0x1p-1 (;=0.5;)
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`push: literal-only division expression with float result > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "float",
  },
}
`;

exports[`push: literal-only multiplication expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "test",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "test",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 32,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`push: literal-only multiplication expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 32
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`push: literal-only multiplication expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;
